# Inventory-Management-Agent

./: .env  .gitignore  README.md  app.py  db.py  init_db.py  models.py  pyproject.toml  requirements.txt  transactions_dummy.csv
ai/: gemini.py
data/: dummy_data.py  inventory.db
services/: analytics.py
